--- a/index.html
+++ b/index.html
@@ -1642,6 +1642,11 @@ function cmp_getlang(j) {
         </section>
         <section class="white-bg">
             <div class="section-content">
+                <iframe src="https://brogle-shop.myshopify.com/collections/all"></iframe>
+            </div>
+        </section>
+        <section class="white-bg">
+            <div class="section-content">
                 <div class="two-columns layout_50-50 vertical-align-middle">
                     <div class="column">
                         <div class="teaser-box-centered-text">
